repair padding on mobile

--- a/src/components/Gallery.scss
+++ b/src/components/Gallery.scss
@@ -29,7 +29,7 @@
       padding: 10px;
     }
     img:nth-of-type(1) {
-      padding-top: 20px;
+      padding-top: 0;
     }
   }
   .gallery-images::after {
